--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
   <hr>
   <h3>Education</h3>
   <ul>
-    <li>Shovihkah Comprehensive Sec. School Zaki Biam
-      (2003-2009)</li>
+    <li>Govt Model sec school (2003-2009)</li>
     <li>Federal University of Agriculture Makurdi
       (2011-2015)</li>
   </ul>
