--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <td><img src="images/ken.jpg" alt="Foga Bunde Kenneth profile picture">
       </td>
       <td>
-        <h1>Foga Bunde Kenneth</h1>
+        <h1>Mkav Maurice Msughter</h1>
         <p><em>Acting Branch Manager <strong><a href="https://www.ubagroup.com/">UBA PLC</a></em></p>
         <p>I am a banker, graphics designer,
           <a href="https://www.facebook.com/">web developer,</a> financial adivser
