--- a/contact details.html
+++ b/contact details.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>contact details</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <h3>Contact details</h3>
@@ -10,6 +11,7 @@
       <li>Phone Number: +2347066970100</li>
       <li>email address: kennethfoga@gmail.com</li>
     </ul>
+    <hr>
     <h3>Contact Us</h3>
 <form action="mailto:kennethfoga@gmail.com" method="post" enctype="text/plain">
   <label>Your name:</label>
