--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>kenneth's personal site</title>
+<link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -25,7 +26,7 @@
   <hr>
   <h3>Education</h3>
   <ul>
-    <li>Govt Model sec school (2003-2009)</li>
+    <li>(2003-2009)</li>
     <li>Federal University of Agriculture Makurdi
       (2011-2015)</li>
   </ul>
